Criacao do texto no site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Site sobre Tecnologia</title>
 </head>
 <body>
-  
+  <h1>Microsoft abre inscrições para programa de capacitação de mulheres na tecnologia</h1>
+  <p>A Microsoft, em parceria com a comunidade de mulheres na tecnologia WoMakersCode, está com inscrições abertas para a 3ª edição do Girls Power.
+
+    O programa de mentoria tem como objetivo capacitar mulheres em fundamentos de programação low code/no code (baixo ou pouco código) em Power Platform. As interessadas podem se inscrever para as 5 mil vagas disponíveis até 17 de março neste link.
+  </p>
 </body>
 </html>
